# aiidalab-mlip

./: DEVELOPMENT.md  INSTALLATION.md  LICENSE  README.md  USER_GUIDE.md  __init__.py  example.ipynb  main.ipynb  setup.cfg  start.py
src/aiidalab_mlip/: __init__.py  main.py  prediction.py  process.py  results.py  structure.py  training.py
src/aiidalab_mlip/common/: __init__.py
