[aiidalab]
title = My App

[metadata]
name = aiidalab-mlip
version = 0.1-alpha
author = The AiiDAlab Team
author_email = 
description = This AiiDAlab application was created with the app cutter.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aiidalab/aiidalab-mlip
project_urls =
    Logo = https://raw.githubusercontent.com/aiidalab/aiidalab-mlip/main/img/logo.png
    Documentation = https://github.com/aiidalab/aiidalab-mlip/#readme
    Bug Tracker = https://github.com/aiidalab/aiidalab-mlip/issues
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Development Status :: 1 - Planning

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.7
install_requires =
    aiidalab>=21.09.0
    aiidalab-widgets-base
    traitlets~=5.0

[flake8]
ignore =
    E501  # Line length handled by black.
    W503  # Line break before binary operator, preferred formatting for black.
    E203  # Whitespace before ':', preferred formatting for black.
